<resources>
    <string name="app_name">CocktailApp</string>
    <string name="splash_screen_quotes">Weekend Cocktails</string>
    <string name="cocktail_drinks">Cocktail Drinks</string>
    <string name="go_back">Back</string>
    <string name="favourite">favourite</string>
    <string name="drink_id">Drink Id</string>
    <string name="drink_category">Category</string>
    <string name="drink_alcoholic">Alcoholic</string>
    <string name="drink_glass_type">Glass Type</string>
    <string name="drink_instructions">Instructions</string>
    <string name="drink_ingredient">Ingredient</string>
    <string name="drink_measure">Measure</string>
    <string name="drink_data">Updated date</string>
    <string name="exit_title">Close</string>
    <string name="action_retry">RETRY</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="nothing_found">No result found</string>
</resources>