...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/go_back"
        android:focusable="true"
...
